added new class called chat so players can communicate .  and finally RandomGame is integrated with other classes . Going to make more changes tomorrow to perfect it and is going to be done by 19:00